<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/forBackgroundCalculator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RadioGroup
        android:id="@+id/radioButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/calculation_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/switchThemeNight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/night_theme" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/switchThemeDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/day_theme" />
    </RadioGroup>

    <TextView
        android:id="@+id/calculation_text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text=""
        android:textColor="@color/black"
        android:textSize="@dimen/textSizeCalculationText"
        app:layout_constraintBottom_toTopOf="@+id/resultCalculation" />

    <TextView
        android:id="@+id/resultCalculation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text=""
        android:textColor="@color/white"
        android:textSize="@dimen/textSizeResultCalculation" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_number_one"
            style="@style/forButtonCalculation"
            android:text="@string/_1"
            app:layout_constraintBottom_toTopOf="@+id/button_number_four"
            app:layout_constraintEnd_toStartOf="@+id/button_number_two"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_number_two"
            style="@style/forButtonCalculation"
            android:text="@string/_2"
            app:layout_constraintBottom_toTopOf="@+id/button_number_five"
            app:layout_constraintEnd_toStartOf="@+id/button_number_three"
            app:layout_constraintStart_toEndOf="@+id/button_number_one"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_number_three"
            style="@style/forButtonCalculation"
            android:background="#8000"
            android:text="@string/_3"
            android:textSize="@dimen/textSizeOnButton"
            app:layout_constraintBottom_toTopOf="@+id/button_number_six"
            app:layout_constraintEnd_toStartOf="@id/button_sign_delete"
            app:layout_constraintStart_toEndOf="@+id/button_number_two"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_sign_delete"
            style="@style/forButtonCalculation"
            android:text="@string/c"
            app:layout_constraintBottom_toTopOf="@+id/button_sign_minus"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button_number_three"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_number_four"
            style="@style/forButtonCalculation"
            android:text="@string/_4"
            app:layout_constraintBottom_toTopOf="@id/button_number_seven"
            app:layout_constraintEnd_toStartOf="@+id/button_number_five"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_number_one" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_number_five"
            style="@style/forButtonCalculation"
            android:text="@string/_5"
            app:layout_constraintBottom_toTopOf="@id/button_number_eight"
            app:layout_constraintEnd_toStartOf="@+id/button_number_six"
            app:layout_constraintStart_toEndOf="@+id/button_number_four"
            app:layout_constraintTop_toBottomOf="@+id/button_number_two" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_number_six"
            style="@style/forButtonCalculation"
            android:text="@string/_6"
            app:layout_constraintBottom_toTopOf="@id/button_number_nine"
            app:layout_constraintEnd_toStartOf="@+id/button_sign_minus"
            app:layout_constraintStart_toEndOf="@+id/button_number_five"
            app:layout_constraintTop_toBottomOf="@+id/button_number_three"
            tools:layout_editor_absoluteX="72dp"
            tools:layout_editor_absoluteY="148dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_sign_minus"
            style="@style/forButtonCalculation"
            android:text="@string/minus"
            app:layout_constraintBottom_toTopOf="@id/button_sign_plus"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button_number_six"
            app:layout_constraintTop_toBottomOf="@+id/button_sign_delete" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_number_seven"
            style="@style/forButtonCalculation"
            android:text="@string/_7"
            app:layout_constraintBottom_toTopOf="@id/button_number_null"
            app:layout_constraintEnd_toStartOf="@+id/button_number_eight"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_number_four" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_number_eight"
            style="@style/forButtonCalculation"
            android:text="@string/_8"
            app:layout_constraintBottom_toTopOf="@id/button_sign_multiply"
            app:layout_constraintEnd_toStartOf="@+id/button_number_nine"
            app:layout_constraintStart_toEndOf="@+id/button_number_seven"
            app:layout_constraintTop_toBottomOf="@+id/button_number_five" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_number_nine"
            style="@style/forButtonCalculation"
            android:text="@string/_9"
            app:layout_constraintBottom_toTopOf="@id/button_sign_division"
            app:layout_constraintEnd_toStartOf="@+id/button_sign_plus"
            app:layout_constraintStart_toEndOf="@+id/button_number_eight"
            app:layout_constraintTop_toBottomOf="@+id/button_number_six" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_sign_plus"
            style="@style/forButtonCalculation"
            android:text="@string/plus"
            app:layout_constraintBottom_toTopOf="@id/button_sign_equally"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button_number_nine"
            app:layout_constraintTop_toBottomOf="@+id/button_sign_minus" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_number_null"
            style="@style/forButtonCalculation"
            android:text="@string/_0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/button_sign_multiply"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_number_seven" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_sign_multiply"
            style="@style/forButtonCalculation"
            android:text="@string/multiply"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/button_sign_division"
            app:layout_constraintStart_toEndOf="@+id/button_number_null"
            app:layout_constraintTop_toBottomOf="@+id/button_number_eight" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_sign_division"
            style="@style/forButtonCalculation"
            android:text="@string/division"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/button_sign_equally"
            app:layout_constraintStart_toEndOf="@+id/button_sign_multiply"
            app:layout_constraintTop_toBottomOf="@+id/button_number_nine" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_sign_equally"
            style="@style/forButtonCalculation"
            android:text="@string/equally"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button_sign_division"
            app:layout_constraintTop_toBottomOf="@+id/button_sign_plus" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>